# BASSAM71

./: DEPLOYMENT_GUIDE.md  bassam_brain.py  check_deployment.py  config.js  deploy_guide.md  deployment_fix.py  knowledge_global.md  main.py  manifest.json  package.json  pyproject.toml  render.yaml  replit.md  requirements.txt  routes_image.py  server.js  service-worker.js  vercel.json
prices/: fallback_prices_catalog.json  prices_export (8).json
public/: chat.js  index.html
