[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Bassam <78672415+bassam-st@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
beautifulsoup4 = "^4.13.5"
readability-lxml = "^0.8.4.1"
ddgs = "^9.6.0"
diskcache = "^5.6.3"
python-dotenv = "^1.1.1"
orjson = "^3.11.3"
loguru = "^0.7.3"
nltk = "^3.9.1"
pyarabic = "^0.6.15"
sumy = "^0.11.0"
rapidfuzz = "^3.14.1"
matplotlib = "^3.10.6"
fpdf2 = "^2.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
